--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "LayoutSkeleton",
-  "description": "Custom layout skeleton",
+  "name": "murilo002skeleton",
+  "description": "Custom murilo002 skeleton",
   "type": "layout",
-  "version": "1.0.0",
+  "version": "1.1.34",
   "dependencies": {
     "system": {
       "type": "SAE",
